@@ -4,7 +4,7 @@
       "David Golden <dagolden@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 4.300018, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140",
    "license" : [
       "apache_2_0"
    ],
@@ -30,6 +30,14 @@
             "ExtUtils::MakeMaker" : "6.30"
          }
       },
+      "develop" : {
+         "requires" : {
+            "Pod::Coverage::TrustPod" : "0",
+            "Test::CPAN::Meta" : "0",
+            "Test::Pod" : "1.41",
+            "Test::Pod::Coverage" : "1.08"
+         }
+      },
       "runtime" : {
          "requires" : {
             "Carp" : "0",
@@ -43,8 +51,11 @@
       },
       "test" : {
          "requires" : {
+            "ExtUtils::MakeMaker" : "0",
             "File::Find" : "0",
+            "File::Spec::Functions" : "0",
             "File::Temp" : "0",
+            "List::Util" : "0",
             "Test::Fatal" : "0",
             "Test::More" : "0.96"
          }
@@ -53,26 +64,26 @@
    "provides" : {
       "Hash::Objectified" : {
          "file" : "lib/Hash/Objectify.pm",
-         "version" : "0.001"
+         "version" : "0.002"
       },
       "Hash::Objectify" : {
          "file" : "lib/Hash/Objectify.pm",
-         "version" : "0.001"
+         "version" : "0.002"
       }
    },
    "release_status" : "stable",
    "resources" : {
       "bugtracker" : {
-         "mailto" : "bug-hash-objectify at rt.cpan.org",
-         "web" : "http://rt.cpan.org/Public/Dist/Display.html?Name=Hash-Objectify"
+         "web" : "https://github.com/dagolden/hash-objectify/issues"
       },
-      "homepage" : "https://github.com/dagolden/hash-objectify",
+      "homepage" : "https://metacpan.org/release/Hash-Objectify",
       "repository" : {
          "type" : "git",
-         "url" : "https://github.com/dagolden/hash-objectify.git",
+         "url" : "git://github.com/dagolden/hash-objectify.git",
          "web" : "https://github.com/dagolden/hash-objectify"
       }
    },
-   "version" : "0.001"
+   "version" : "0.002",
+   "x_authority" : "cpan:DAGOLDEN"
 }
 
