@@ -5,6 +5,8 @@ copyright_holder = David Golden
 copyright_year   = 2012
 
 [@DAGOLDEN]
-:version = 0.027
+:version = 0.045
+AutoMetaResources.bugtracker.rt = 0
+AutoMetaResources.bugtracker.github = user:dagolden
 stopwords = classname
 
