@@ -2,7 +2,8 @@ Revision history for Hash-Objectify
 
 {{$NEXT}}
 
+    - Fix documentation typos and tidy code
+
 0.001     2012-07-24 14:40:35 America/New_York
 
-  - First release
-
+    - First release
